# RAG-LLM

./: .dockerignore  .env.example  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DeepSeek.md  Dockerfile  LICENSE  Makefile  Ollama.md  README.md  conversation_manager.py  docker-compose.yml  embedding_config.json  example_urls.txt  filtered_splits.json  gui.py  knowledge_metadata.json  lunwen.json  project structure  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
RAG_bot/: Requests.py  bot_config.py  bot_handlers.py  bot_main.py  bot_utils.py  youtube_processor.py
apps/api/: main.py
docker/: Dockerfile.api  docker-compose.api.yml
src/clinical_rag/: PIPELINE_SPEC.md  Requests.py  bot_config.py  indexer.py  knowledge_manager.py
src/clinical_rag/core/: audit.py  exposure.py  gateway.py  kb_demo.py  kb_loader.py  llm.py  pipeline.py  policies.py  privacy.py  retrieval.py  review.py  settings.py  transient.py
tests/: test_invariants.py
tools/: build_index.py  ingest_pdf_Example.py
